[package]
name = "unearth"
version = "0.8.7"
edition = "2021"

[[bin]]
name = "unearth"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
rayon = "1"
crossbeam-channel = "0.5"
jemallocator = "0.5"
jwalk = "0.8"
ntfs = "0.4.0"
